--- a/src/index.css
+++ b/src/index.css
@@ -29,9 +29,9 @@ body {
 }
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-  position: relative;
+  position: fixed;
   right: 0;
-  bottom: 0;
+  top: 9vh;
   max-width: 100%;
   max-height: 100%;
 }
