--- a/src/SecondPage.css
+++ b/src/SecondPage.css
@@ -26,21 +26,26 @@
      /*margin-top: 50px; */
      width: 100% ;
      height: 147%;
+     z-index: -1;
+    
     }
+
 
     .area1 h2
     {
         z-index: 1;
-        margin-top: -50vh;
+       /* margin-top: -50vh; */
         font-weight:lighter;
         font-size:18px;
         color: white;
+
     }
     .area1 h3
     {
         font-weight:lighter;
         font-size:14px;
         color: white;
+        margin-top: -50vh;
     }
     .area1 p
     {
