--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,13 @@ body {
   background: #ddd;
   color: black;
 }
+
+#mySkip {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
